[gd_scene load_steps=12 format=3 uid="uid://ce3luncfxx6sh"]

[ext_resource type="Script" path="res://sceny/UI/obsługaPrzycisków.gd" id="1_t5hef"]
[ext_resource type="Script" path="res://sceny/UI/przemieśćMenu.gd" id="2_k8b4v"]
[ext_resource type="FontFile" uid="uid://b01nhi7csnkl8" path="res://Judical.ttf" id="3_hcr34"]
[ext_resource type="Texture2D" uid="uid://byb4yvluq0anj" path="res://rysunki/logo/logo.png" id="4_iqmgy"]
[ext_resource type="PackedScene" uid="uid://dwmuyj0ivdjnr" path="res://sceny/UI/Ustawienia/Ustawienia.tscn" id="5_6vxry"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tyol2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hkne8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vdvlo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b4m8o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o62te"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1fdl1"]

[node name="KartaGłówna" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t5hef")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_k8b4v")

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer"]
layout_direction = 2
layout_mode = 2
alignment = 1

[node name="kontenerNamenu" type="MarginContainer" parent="ColorRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 175
theme_override_constants/margin_bottom = 50

[node name="naMenu" type="VBoxContainer" parent="ColorRect/MarginContainer/HBoxContainer/kontenerNamenu"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="naLogo" type="HBoxContainer" parent="ColorRect/MarginContainer/HBoxContainer/kontenerNamenu/naMenu"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="ColorRect/MarginContainer/HBoxContainer/kontenerNamenu/naMenu/naLogo"]
scale = Vector2(3, 3)
texture = ExtResource("4_iqmgy")

[node name="GłówneOpcje" type="VBoxContainer" parent="ColorRect/MarginContainer/HBoxContainer/kontenerNamenu/naMenu"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_constants/separation = 10

[node name="Graj" type="Button" parent="ColorRect/MarginContainer/HBoxContainer/kontenerNamenu/naMenu/GłówneOpcje"]
layout_mode = 2
theme_override_colors/font_color = Color(0.588235, 0.588235, 0.588235, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("3_hcr34")
theme_override_styles/normal = SubResource("StyleBoxEmpty_tyol2")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hkne8")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vdvlo")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_b4m8o")
theme_override_styles/focus = SubResource("StyleBoxEmpty_o62te")
text = "Graj"

[node name="Opcje" type="Button" parent="ColorRect/MarginContainer/HBoxContainer/kontenerNamenu/naMenu/GłówneOpcje"]
layout_mode = 2
theme_override_colors/font_color = Color(0.588235, 0.588235, 0.588235, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0.588235, 0.588235, 0.588235, 1)
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("3_hcr34")
theme_override_styles/normal = SubResource("StyleBoxEmpty_1fdl1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hkne8")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vdvlo")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_b4m8o")
theme_override_styles/focus = SubResource("StyleBoxEmpty_o62te")
text = "Opcje"

[node name="Twórcy" type="Button" parent="ColorRect/MarginContainer/HBoxContainer/kontenerNamenu/naMenu/GłówneOpcje"]
layout_mode = 2
theme_override_colors/font_color = Color(0.588235, 0.588235, 0.588235, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0.588235, 0.588235, 0.588235, 1)
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("3_hcr34")
theme_override_styles/normal = SubResource("StyleBoxEmpty_1fdl1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hkne8")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vdvlo")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_b4m8o")
theme_override_styles/focus = SubResource("StyleBoxEmpty_o62te")
text = "Twórcy"

[node name="Wyjdź" type="Button" parent="ColorRect/MarginContainer/HBoxContainer/kontenerNamenu/naMenu/GłówneOpcje"]
layout_mode = 2
theme_override_colors/font_color = Color(0.588235, 0.588235, 0.588235, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0.588235, 0.588235, 0.588235, 1)
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("3_hcr34")
theme_override_styles/normal = SubResource("StyleBoxEmpty_1fdl1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hkne8")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vdvlo")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_b4m8o")
theme_override_styles/focus = SubResource("StyleBoxEmpty_o62te")
text = "Wyjdź"

[node name="kontenerNaOpcje2" parent="ColorRect/MarginContainer/HBoxContainer" instance=ExtResource("5_6vxry")]
layout_mode = 2

[connection signal="pressed" from="ColorRect/MarginContainer/HBoxContainer/kontenerNamenu/naMenu/GłówneOpcje/Graj" to="." method="_on_graj_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/HBoxContainer/kontenerNamenu/naMenu/GłówneOpcje/Opcje" to="." method="_on_opcje_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/HBoxContainer/kontenerNamenu/naMenu/GłówneOpcje/Opcje" to="ColorRect/MarginContainer/HBoxContainer/kontenerNaOpcje2" method="_on_opcje_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/HBoxContainer/kontenerNamenu/naMenu/GłówneOpcje/Twórcy" to="." method="_on_twórcy_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/HBoxContainer/kontenerNamenu/naMenu/GłówneOpcje/Wyjdź" to="." method="_on_wyjdź_pressed"]
[connection signal="wLewo" from="ColorRect/MarginContainer/HBoxContainer/kontenerNaOpcje2" to="." method="_on_kontener_na_opcje_2_w_lewo"]
